# kuzu-demo-dspy

./: .gitignore  README.md  pyproject.toml
data/extracted_data/: drugs_2.json
src/: 01_create_drug_graph.py  02_create_patient_graph.py  03_create_vector_index.py  app.py  docker-compose.yml  helpers.py  image_extractor.py  notes_extractor.py  ui.py
src/baml_src/: clients.baml  generators.baml  graphrag.baml
src/evals/: image_extractor_eval.py  notes_extractor_eval.py
src/pydantic_models/: graphrag.py  image_extractor.py  notes_extractor.py
src/tests/: plot_results.py  test_agent_endpoint.py  test_data.py  test_vanilla_graphrag.py
src/tests/results/: google-gemini-2.0-flash.txt  google-gemini-2.5-flash.txt  microsoft-phi4.txt  mistralai-mistral-medium-3.txt  openai-gpt-4.1.txt  openai-gpt-4o.txt  qwen-qwen3-30b-a3b.txt
